@@ -5,6 +5,7 @@
 	"General.HostTag": "(Host Only)",
 	"General.HostStormyTag": "(Host/Stormy)",
 	"General.Vow/Adamance": "(Vow/Adamance)",
+	"General.Experimentation": "(Experimentation)",
 	"General.RejoinRequired": "(Rejoin Required)",
 	"General.GeneralActions": "General Actions",
 	"General.None": "None",
@@ -210,6 +211,7 @@
 	"TrollTab.DeleteTerminal": "Delete Terminal",
 	"TrollTab.PJSpammer": "PJ Plushie Spammer",
 	"TrollTab.TerminalSound": "Toggle Terminal Sound",
+	"TrollTab.CloseGate": "Close Gate",
 	"VisualsTab.Title": "Visuals",
 	"VisualsTab.ESP": "ESP",
 	"VisualsTab.ToggleAll": "Toggle All",
