@@ -17,6 +17,7 @@ v1.4.5
 - Added Bush Wolf Enemy Insta Kill - Added Bush Wolf Enemy to Insta Kill
 - Added Cave Dweller Insta Kill - Added Cave Dweller to Insta Kill
 - Fixed Enemy Controller - Enemy control gets disabled when the enemy dies or gets destroyed
+- Added Close Gate - Closes Experimentation gate at the front entrance
 - Fixed Teleport Enemy To Player - It was using EnemyAI[] instead of EnemyAI
 - Fixed Chams Error - Fixed a chams error with turrets when you left mid game
 - Fixed God Mode Error - Added null checks to all god mode patches
